// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots CircleAvatar default 1`] = `
<div>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <img
      alt="taryn-treutel-avatar"
      className="circle-avatar"
      src="https://loremflickr.com/300/300"
    />
  </div>
  <button
    onClick={[Function]}
    style={
      Object {
        "background": "#28c",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
  <div
    style={
      Object {
        "background": "white",
        "bottom": 0,
        "display": "none",
        "left": 0,
        "overflow": "auto",
        "padding": "0 40px",
        "position": "fixed",
        "right": 0,
        "top": 0,
        "zIndex": 99999,
      }
    }
  >
    <button
      onClick={[Function]}
      style={
        Object {
          "background": "#28c",
          "border": "none",
          "borderRadius": "0 0 0 5px",
          "color": "#fff",
          "cursor": "pointer",
          "display": "block",
          "fontFamily": "sans-serif",
          "fontSize": "12px",
          "padding": "5px 15px",
          "position": "fixed",
          "right": 0,
          "top": 0,
        }
      }
      type="button"
    >
      ×
    </button>
    <div>
      <div
        style={
          Object {
            "WebkitFontSmoothing": "antialiased",
            "backgroundColor": "#fff",
            "border": "1px solid #eee",
            "borderRadius": "2px",
            "color": "#444",
            "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
            "fontSize": "15px",
            "fontWeight": 300,
            "lineHeight": 1.45,
            "marginBottom": "20px",
            "marginTop": "20px",
            "padding": "20px 40px 40px",
          }
        }
      >
        <div
          style={
            Object {
              "borderBottom": "1px solid #eee",
              "marginBottom": 10,
              "paddingTop": 10,
            }
          }
        >
          <h1
            style={
              Object {
                "fontSize": "35px",
                "margin": 0,
                "padding": 0,
              }
            }
          >
            CircleAvatar
          </h1>
          <h2
            style={
              Object {
                "fontSize": "22px",
                "fontWeight": 400,
                "margin": "0 0 10px 0",
                "padding": 0,
              }
            }
          >
            default
          </h2>
        </div>
        
        <div>
          <h1
            style={
              Object {
                "borderBottom": "1px solid #EEE",
                "fontSize": "25px",
                "margin": "20px 0 0 0",
                "padding": "0 0 5px 0",
              }
            }
          >
            Story Source
          </h1>
          <pre
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#fafafa",
                "display": "flex",
                "fontFamily": "Menlo, Monaco, \\"Courier New\\", monospace",
                "fontSize": ".88em",
                "justifyContent": "space-between",
                "lineHeight": 1.5,
                "overflowX": "scroll",
                "padding": ".5rem",
              }
            }
          >
            <div>
              <div
                style={
                  Object {
                    "paddingLeft": 18,
                    "paddingRight": 3,
                  }
                }
              >
                <span
                  style={
                    Object {
                      "color": "#444",
                    }
                  }
                >
                  &lt;
                  CircleAvatar
                </span>
                <span>
                  <span>
                     
                    <span
                      style={Object {}}
                    >
                      username
                    </span>
                    <span>
                      =
                      <span
                        style={Object {}}
                      >
                        "
                        <span
                          style={
                            Object {
                              "color": "#22a",
                              "wordBreak": "break-word",
                            }
                          }
                        >
                          taryn-treutel
                        </span>
                        "
                      </span>
                    </span>
                  </span>
                  <span>
                     
                    <span
                      style={Object {}}
                    >
                      src
                    </span>
                    <span>
                      =
                      <span
                        style={Object {}}
                      >
                        "
                        <span
                          style={
                            Object {
                              "color": "#22a",
                              "wordBreak": "break-word",
                            }
                          }
                        >
                          https://loremflickr.com/300/300
                        </span>
                        "
                      </span>
                    </span>
                     
                  </span>
                </span>
                <span
                  style={
                    Object {
                      "color": "#444",
                    }
                  }
                >
                  /&gt;
                </span>
              </div>
            </div>
            <button
              onClick={[Function]}
              style={
                Object {
                  "alignSelf": "flex-start",
                  "backgroundColor": "rgb(255, 255, 255)",
                  "borderColor": "rgb(238, 238, 238)",
                  "borderImage": "initial",
                  "borderRadius": "3px",
                  "borderStyle": "solid",
                  "borderWidth": "1px",
                  "cursor": "pointer",
                  "flexShrink": "0",
                  "fontSize": "13px",
                  "overflow": "hidden",
                  "padding": "3px 10px",
                }
              }
              type="button"
            >
              Copy
            </button>
          </pre>
        </div>
        <div>
          <h1
            style={
              Object {
                "borderBottom": "1px solid #EEE",
                "fontSize": "25px",
                "margin": "20px 0 0 0",
                "padding": "0 0 5px 0",
              }
            }
          >
            Prop Types
          </h1>
          <div>
            <h2
              style={
                Object {
                  "margin": "20px 0 0 0",
                }
              }
            >
              "
              CircleAvatar
              " Component
            </h2>
            <table>
              <thead>
                <tr>
                  <th
                    style={
                      Object {
                        "textAlign": "left",
                        "verticalAlign": "top",
                      }
                    }
                  >
                    property
                  </th>
                  <th
                    style={
                      Object {
                        "textAlign": "left",
                        "verticalAlign": "top",
                      }
                    }
                  >
                    propType
                  </th>
                  <th
                    style={
                      Object {
                        "textAlign": "left",
                        "verticalAlign": "top",
                      }
                    }
                  >
                    required
                  </th>
                  <th
                    style={
                      Object {
                        "textAlign": "left",
                        "verticalAlign": "top",
                      }
                    }
                  >
                    default
                  </th>
                  <th
                    style={
                      Object {
                        "textAlign": "left",
                        "verticalAlign": "top",
                      }
                    }
                  >
                    description
                  </th>
                </tr>
              </thead>
              <tbody>
                <tr>
                  <td
                    style={
                      Object {
                        "paddingRight": 10,
                        "verticalAlign": "top",
                      }
                    }
                  >
                    username
                  </td>
                  <td
                    style={
                      Object {
                        "paddingRight": 10,
                        "verticalAlign": "top",
                      }
                    }
                  >
                    <span>
                      unknown
                    </span>
                  </td>
                  <td
                    style={
                      Object {
                        "paddingRight": 10,
                        "verticalAlign": "top",
                      }
                    }
                  >
                    -
                  </td>
                  <td
                    style={
                      Object {
                        "paddingRight": 10,
                        "verticalAlign": "top",
                      }
                    }
                  >
                    <span
                      style={
                        Object {
                          "color": "#22a",
                          "wordBreak": "break-word",
                        }
                      }
                    >
                      
                    </span>
                  </td>
                  <td
                    style={
                      Object {
                        "paddingRight": 10,
                        "verticalAlign": "top",
                      }
                    }
                  />
                </tr>
                <tr>
                  <td
                    style={
                      Object {
                        "paddingRight": 10,
                        "verticalAlign": "top",
                      }
                    }
                  >
                    src
                  </td>
                  <td
                    style={
                      Object {
                        "paddingRight": 10,
                        "verticalAlign": "top",
                      }
                    }
                  >
                    <span>
                      unknown
                    </span>
                  </td>
                  <td
                    style={
                      Object {
                        "paddingRight": 10,
                        "verticalAlign": "top",
                      }
                    }
                  >
                    -
                  </td>
                  <td
                    style={
                      Object {
                        "paddingRight": 10,
                        "verticalAlign": "top",
                      }
                    }
                  >
                    <span
                      style={
                        Object {
                          "color": "#22a",
                          "wordBreak": "break-word",
                        }
                      }
                    >
                      
                    </span>
                  </td>
                  <td
                    style={
                      Object {
                        "paddingRight": 10,
                        "verticalAlign": "top",
                      }
                    }
                  />
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots CircleAvatar no username 1`] = `
<div>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <img
      alt="no-username-avatar"
      className="circle-avatar"
      src="https://s3-eu-west-1.amazonaws.com/bluenove-assembl-images/avatar.png"
    />
  </div>
  <button
    onClick={[Function]}
    style={
      Object {
        "background": "#28c",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
  <div
    style={
      Object {
        "background": "white",
        "bottom": 0,
        "display": "none",
        "left": 0,
        "overflow": "auto",
        "padding": "0 40px",
        "position": "fixed",
        "right": 0,
        "top": 0,
        "zIndex": 99999,
      }
    }
  >
    <button
      onClick={[Function]}
      style={
        Object {
          "background": "#28c",
          "border": "none",
          "borderRadius": "0 0 0 5px",
          "color": "#fff",
          "cursor": "pointer",
          "display": "block",
          "fontFamily": "sans-serif",
          "fontSize": "12px",
          "padding": "5px 15px",
          "position": "fixed",
          "right": 0,
          "top": 0,
        }
      }
      type="button"
    >
      ×
    </button>
    <div>
      <div
        style={
          Object {
            "WebkitFontSmoothing": "antialiased",
            "backgroundColor": "#fff",
            "border": "1px solid #eee",
            "borderRadius": "2px",
            "color": "#444",
            "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
            "fontSize": "15px",
            "fontWeight": 300,
            "lineHeight": 1.45,
            "marginBottom": "20px",
            "marginTop": "20px",
            "padding": "20px 40px 40px",
          }
        }
      >
        <div
          style={
            Object {
              "borderBottom": "1px solid #eee",
              "marginBottom": 10,
              "paddingTop": 10,
            }
          }
        >
          <h1
            style={
              Object {
                "fontSize": "35px",
                "margin": 0,
                "padding": 0,
              }
            }
          >
            CircleAvatar
          </h1>
          <h2
            style={
              Object {
                "fontSize": "22px",
                "fontWeight": 400,
                "margin": "0 0 10px 0",
                "padding": 0,
              }
            }
          >
            no username
          </h2>
        </div>
        
        <div>
          <h1
            style={
              Object {
                "borderBottom": "1px solid #EEE",
                "fontSize": "25px",
                "margin": "20px 0 0 0",
                "padding": "0 0 5px 0",
              }
            }
          >
            Story Source
          </h1>
          <pre
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#fafafa",
                "display": "flex",
                "fontFamily": "Menlo, Monaco, \\"Courier New\\", monospace",
                "fontSize": ".88em",
                "justifyContent": "space-between",
                "lineHeight": 1.5,
                "overflowX": "scroll",
                "padding": ".5rem",
              }
            }
          >
            <div>
              <div
                style={
                  Object {
                    "paddingLeft": 18,
                    "paddingRight": 3,
                  }
                }
              >
                <span
                  style={
                    Object {
                      "color": "#444",
                    }
                  }
                >
                  &lt;
                  CircleAvatar
                </span>
                <span />
                <span
                  style={
                    Object {
                      "color": "#444",
                    }
                  }
                >
                  /&gt;
                </span>
              </div>
            </div>
            <button
              onClick={[Function]}
              style={
                Object {
                  "alignSelf": "flex-start",
                  "backgroundColor": "rgb(255, 255, 255)",
                  "borderColor": "rgb(238, 238, 238)",
                  "borderImage": "initial",
                  "borderRadius": "3px",
                  "borderStyle": "solid",
                  "borderWidth": "1px",
                  "cursor": "pointer",
                  "flexShrink": "0",
                  "fontSize": "13px",
                  "overflow": "hidden",
                  "padding": "3px 10px",
                }
              }
              type="button"
            >
              Copy
            </button>
          </pre>
        </div>
        <div>
          <h1
            style={
              Object {
                "borderBottom": "1px solid #EEE",
                "fontSize": "25px",
                "margin": "20px 0 0 0",
                "padding": "0 0 5px 0",
              }
            }
          >
            Prop Types
          </h1>
          <div>
            <h2
              style={
                Object {
                  "margin": "20px 0 0 0",
                }
              }
            >
              "
              CircleAvatar
              " Component
            </h2>
            <table>
              <thead>
                <tr>
                  <th
                    style={
                      Object {
                        "textAlign": "left",
                        "verticalAlign": "top",
                      }
                    }
                  >
                    property
                  </th>
                  <th
                    style={
                      Object {
                        "textAlign": "left",
                        "verticalAlign": "top",
                      }
                    }
                  >
                    propType
                  </th>
                  <th
                    style={
                      Object {
                        "textAlign": "left",
                        "verticalAlign": "top",
                      }
                    }
                  >
                    required
                  </th>
                  <th
                    style={
                      Object {
                        "textAlign": "left",
                        "verticalAlign": "top",
                      }
                    }
                  >
                    default
                  </th>
                  <th
                    style={
                      Object {
                        "textAlign": "left",
                        "verticalAlign": "top",
                      }
                    }
                  >
                    description
                  </th>
                </tr>
              </thead>
              <tbody>
                <tr>
                  <td
                    style={
                      Object {
                        "paddingRight": 10,
                        "verticalAlign": "top",
                      }
                    }
                  >
                    username
                  </td>
                  <td
                    style={
                      Object {
                        "paddingRight": 10,
                        "verticalAlign": "top",
                      }
                    }
                  >
                    <span>
                      unknown
                    </span>
                  </td>
                  <td
                    style={
                      Object {
                        "paddingRight": 10,
                        "verticalAlign": "top",
                      }
                    }
                  >
                    -
                  </td>
                  <td
                    style={
                      Object {
                        "paddingRight": 10,
                        "verticalAlign": "top",
                      }
                    }
                  >
                    <span
                      style={
                        Object {
                          "color": "#22a",
                          "wordBreak": "break-word",
                        }
                      }
                    >
                      
                    </span>
                  </td>
                  <td
                    style={
                      Object {
                        "paddingRight": 10,
                        "verticalAlign": "top",
                      }
                    }
                  />
                </tr>
                <tr>
                  <td
                    style={
                      Object {
                        "paddingRight": 10,
                        "verticalAlign": "top",
                      }
                    }
                  >
                    src
                  </td>
                  <td
                    style={
                      Object {
                        "paddingRight": 10,
                        "verticalAlign": "top",
                      }
                    }
                  >
                    <span>
                      unknown
                    </span>
                  </td>
                  <td
                    style={
                      Object {
                        "paddingRight": 10,
                        "verticalAlign": "top",
                      }
                    }
                  >
                    -
                  </td>
                  <td
                    style={
                      Object {
                        "paddingRight": 10,
                        "verticalAlign": "top",
                      }
                    }
                  >
                    <span
                      style={
                        Object {
                          "color": "#22a",
                          "wordBreak": "break-word",
                        }
                      }
                    >
                      
                    </span>
                  </td>
                  <td
                    style={
                      Object {
                        "paddingRight": 10,
                        "verticalAlign": "top",
                      }
                    }
                  />
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots CircleAvatar playground 1`] = `
<div>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <img
      alt="taryn-treutel-avatar"
      className="circle-avatar"
      src="https://loremflickr.com/300/300"
    />
  </div>
  <button
    onClick={[Function]}
    style={
      Object {
        "background": "#28c",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
  <div
    style={
      Object {
        "background": "white",
        "bottom": 0,
        "display": "none",
        "left": 0,
        "overflow": "auto",
        "padding": "0 40px",
        "position": "fixed",
        "right": 0,
        "top": 0,
        "zIndex": 99999,
      }
    }
  >
    <button
      onClick={[Function]}
      style={
        Object {
          "background": "#28c",
          "border": "none",
          "borderRadius": "0 0 0 5px",
          "color": "#fff",
          "cursor": "pointer",
          "display": "block",
          "fontFamily": "sans-serif",
          "fontSize": "12px",
          "padding": "5px 15px",
          "position": "fixed",
          "right": 0,
          "top": 0,
        }
      }
      type="button"
    >
      ×
    </button>
    <div>
      <div
        style={
          Object {
            "WebkitFontSmoothing": "antialiased",
            "backgroundColor": "#fff",
            "border": "1px solid #eee",
            "borderRadius": "2px",
            "color": "#444",
            "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
            "fontSize": "15px",
            "fontWeight": 300,
            "lineHeight": 1.45,
            "marginBottom": "20px",
            "marginTop": "20px",
            "padding": "20px 40px 40px",
          }
        }
      >
        <div
          style={
            Object {
              "borderBottom": "1px solid #eee",
              "marginBottom": 10,
              "paddingTop": 10,
            }
          }
        >
          <h1
            style={
              Object {
                "fontSize": "35px",
                "margin": 0,
                "padding": 0,
              }
            }
          >
            CircleAvatar
          </h1>
          <h2
            style={
              Object {
                "fontSize": "22px",
                "fontWeight": 400,
                "margin": "0 0 10px 0",
                "padding": 0,
              }
            }
          >
            playground
          </h2>
        </div>
        
        <div>
          <h1
            style={
              Object {
                "borderBottom": "1px solid #EEE",
                "fontSize": "25px",
                "margin": "20px 0 0 0",
                "padding": "0 0 5px 0",
              }
            }
          >
            Story Source
          </h1>
          <pre
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#fafafa",
                "display": "flex",
                "fontFamily": "Menlo, Monaco, \\"Courier New\\", monospace",
                "fontSize": ".88em",
                "justifyContent": "space-between",
                "lineHeight": 1.5,
                "overflowX": "scroll",
                "padding": ".5rem",
              }
            }
          >
            <div>
              <div
                style={
                  Object {
                    "paddingLeft": 18,
                    "paddingRight": 3,
                  }
                }
              >
                <span
                  style={
                    Object {
                      "color": "#444",
                    }
                  }
                >
                  &lt;
                  CircleAvatar
                </span>
                <span>
                  <span>
                     
                    <span
                      style={Object {}}
                    >
                      username
                    </span>
                    <span>
                      =
                      <span
                        style={Object {}}
                      >
                        "
                        <span
                          style={
                            Object {
                              "color": "#22a",
                              "wordBreak": "break-word",
                            }
                          }
                        >
                          taryn-treutel
                        </span>
                        "
                      </span>
                    </span>
                  </span>
                  <span>
                     
                    <span
                      style={Object {}}
                    >
                      src
                    </span>
                    <span>
                      =
                      <span
                        style={Object {}}
                      >
                        "
                        <span
                          style={
                            Object {
                              "color": "#22a",
                              "wordBreak": "break-word",
                            }
                          }
                        >
                          https://loremflickr.com/300/300
                        </span>
                        "
                      </span>
                    </span>
                     
                  </span>
                </span>
                <span
                  style={
                    Object {
                      "color": "#444",
                    }
                  }
                >
                  /&gt;
                </span>
              </div>
            </div>
            <button
              onClick={[Function]}
              style={
                Object {
                  "alignSelf": "flex-start",
                  "backgroundColor": "rgb(255, 255, 255)",
                  "borderColor": "rgb(238, 238, 238)",
                  "borderImage": "initial",
                  "borderRadius": "3px",
                  "borderStyle": "solid",
                  "borderWidth": "1px",
                  "cursor": "pointer",
                  "flexShrink": "0",
                  "fontSize": "13px",
                  "overflow": "hidden",
                  "padding": "3px 10px",
                }
              }
              type="button"
            >
              Copy
            </button>
          </pre>
        </div>
        <div>
          <h1
            style={
              Object {
                "borderBottom": "1px solid #EEE",
                "fontSize": "25px",
                "margin": "20px 0 0 0",
                "padding": "0 0 5px 0",
              }
            }
          >
            Prop Types
          </h1>
          <div>
            <h2
              style={
                Object {
                  "margin": "20px 0 0 0",
                }
              }
            >
              "
              CircleAvatar
              " Component
            </h2>
            <table>
              <thead>
                <tr>
                  <th
                    style={
                      Object {
                        "textAlign": "left",
                        "verticalAlign": "top",
                      }
                    }
                  >
                    property
                  </th>
                  <th
                    style={
                      Object {
                        "textAlign": "left",
                        "verticalAlign": "top",
                      }
                    }
                  >
                    propType
                  </th>
                  <th
                    style={
                      Object {
                        "textAlign": "left",
                        "verticalAlign": "top",
                      }
                    }
                  >
                    required
                  </th>
                  <th
                    style={
                      Object {
                        "textAlign": "left",
                        "verticalAlign": "top",
                      }
                    }
                  >
                    default
                  </th>
                  <th
                    style={
                      Object {
                        "textAlign": "left",
                        "verticalAlign": "top",
                      }
                    }
                  >
                    description
                  </th>
                </tr>
              </thead>
              <tbody>
                <tr>
                  <td
                    style={
                      Object {
                        "paddingRight": 10,
                        "verticalAlign": "top",
                      }
                    }
                  >
                    username
                  </td>
                  <td
                    style={
                      Object {
                        "paddingRight": 10,
                        "verticalAlign": "top",
                      }
                    }
                  >
                    <span>
                      unknown
                    </span>
                  </td>
                  <td
                    style={
                      Object {
                        "paddingRight": 10,
                        "verticalAlign": "top",
                      }
                    }
                  >
                    -
                  </td>
                  <td
                    style={
                      Object {
                        "paddingRight": 10,
                        "verticalAlign": "top",
                      }
                    }
                  >
                    <span
                      style={
                        Object {
                          "color": "#22a",
                          "wordBreak": "break-word",
                        }
                      }
                    >
                      
                    </span>
                  </td>
                  <td
                    style={
                      Object {
                        "paddingRight": 10,
                        "verticalAlign": "top",
                      }
                    }
                  />
                </tr>
                <tr>
                  <td
                    style={
                      Object {
                        "paddingRight": 10,
                        "verticalAlign": "top",
                      }
                    }
                  >
                    src
                  </td>
                  <td
                    style={
                      Object {
                        "paddingRight": 10,
                        "verticalAlign": "top",
                      }
                    }
                  >
                    <span>
                      unknown
                    </span>
                  </td>
                  <td
                    style={
                      Object {
                        "paddingRight": 10,
                        "verticalAlign": "top",
                      }
                    }
                  >
                    -
                  </td>
                  <td
                    style={
                      Object {
                        "paddingRight": 10,
                        "verticalAlign": "top",
                      }
                    }
                  >
                    <span
                      style={
                        Object {
                          "color": "#22a",
                          "wordBreak": "break-word",
                        }
                      }
                    >
                      
                    </span>
                  </td>
                  <td
                    style={
                      Object {
                        "paddingRight": 10,
                        "verticalAlign": "top",
                      }
                    }
                  />
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
